--- a/_posts/Spring/2016-10-13-IoC.md
+++ b/_posts/Spring/2016-10-13-IoC.md
@@ -326,6 +326,42 @@ public class PrototypeBean {
 }
 ```
 
+##### prototype 사용시 ObjectProvider 또는 @Lookup 필요
+
+RequestLogger 컴포넌트에 prototype 스코프가 걸려 있고 이를 불러와 활용하는 예제  
+
+```java
+@Service
+public class RequestService {
+    private final ObjectProvider<RequestLogger> requestLoggerProvider;
+
+    public RequestService(ObjectProvider<RequestLogger> requestLoggerProvider) {
+        this.requestLoggerProvider = requestLoggerProvider;
+    }
+
+    public void logRequest() {
+        RequestLogger requestLogger = requestLoggerProvider.getObject(); // ✅ 매번 새로운 객체 생성
+        System.out.println("[RequestService] Logging with requestId: " + requestLogger.getRequestId());
+    }
+}
+```
+
+```java
+@Service
+public class RequestService {
+
+    public void logRequest() {
+        RequestLogger requestLogger = getRequestLogger(); // ✅ 매번 새로운 객체 생성
+        System.out.println("[RequestService] Logging with requestId: " + requestLogger.getRequestId());
+    }
+
+    @Lookup
+    public RequestLogger getRequestLogger() {
+        return null; // Spring이 이 메서드를 동적으로 구현하여 Prototype Bean을 반환함
+    }
+}
+```
+
 #### **📌 `@Lazy` (필요할 때만 빈 생성)**
 💡 `@Lazy`를 사용하면 **빈을 애플리케이션 시작 시 바로 생성하지 않고, 필요할 때만 생성**한다.
 
